[package]
name = "uvex-fitrs"
version = "0.0.1"
authors = [""]
description = "Parse FITS file in pure rust"
homepage = "https://github.com/MayaBasu/uvex-fitrs"
repository = "https://github.com/MayaBasu/uvex-fitrs"
readme = "README.md"
keywords = []
categories = []
license = "GPL-3.0"

[dependencies]
byteorder = "1"
